--- a/resources/views/jobs/index.edge
+++ b/resources/views/jobs/index.edge
@@ -3,15 +3,17 @@
 @section('content')
 <div class="container w-1/2 mx-auto pt-20 mt-5">
     <section class="jobs">
-        <section class="job__details w-full text-xl text-gray-800 leading-normal mb-5" style="font-family:Georgia,serif;">
-            <div class="job__details__heading font-sans">
-                <h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Deviz search his factotum</h1>
-                <p class="text-sm md:text-base font-normal text-gray-600">Posted on June 19, 2019</p>
-            </div>
-            <div class="job__details__content">
-                <p class="py-6">👋 We are <a class="text-teal-500 no-underline hover:underline" href="https://www.deviz.net">deviz.</a> We power companies using technical innovation, data and automation. We integrate our solutions into your processes, applications, marketing and business development strategies.</p>
-            </div>
-        </section>
+        @each(job in jobs)
+            <section class="job__details w-full text-xl text-gray-800 leading-normal mb-5" style="font-family:Georgia,serif;">
+                <div class="job__details__heading font-sans">
+                    <h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">{{ job.job_title }}</h1>
+                    <p class="text-sm md:text-base font-normal text-gray-600">Posted on {{ job.created_at }} | {{ job.company_name }}</p>
+                </div>
+                <div class="job__details__content">
+                    <p class="py-6">{{{ job.job_description }}}</p>
+                </div>
+            </section>
+        @endeach
     </section>
 </div>
 @endsection
