--- a/resources/views/app.edge
+++ b/resources/views/app.edge
@@ -12,10 +12,10 @@
         <nav id="header" class="header fixed w-full z-10 top-0">
             <div id="progress" class="header__progress h-1 z-20 top-0" style="background:linear-gradient(to right, #4dc0b5 var(--scroll), transparent 0);"></div>
             <div class="w-1/2 mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
-                <a class="text-gray-900 text-base no-underline font-extrabold text-xl" href="#">Laravel Jobs</a>
+                <a class="text-gray-900 text-base no-underline font-extrabold text-xl" href="{{ route('jobs.index') }}">Laravel Jobs</a>
                 <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20" id="nav-content">
                     <ul class="list-reset flex justify-end flex-1 items-center">
-                        <li class="mr-3"><a class="inline-block py-2 px-4 text-gray-900 font-bold no-underline" href="#">S'abonner à l'infolettre</a></li>
+                        <li class="mr-3"><a class="inline-block py-2 px-4 text-gray-900 font-bold no-underline" href="{{ route('jobs.subscription') }}">Subscribe to the newsletter</a></li>
                     </ul>
                 </div>
             </div>
